feat: 영화 차트 흐름과 백필 기능 추가
