# apps/api/src/lobby-board/dto/backfill-response.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class BackfillResponseDto {
+  @ApiProperty({
+    example: '백필 시작: 2026-09-01 ~ 2026-09-14',
+  })
+  message!: string;
+}
